# trading-platform

./: .env.example  LICENSE  Makefile  README.md  alembic.ini  api.py  app.py  check_all.py  check_imports.py  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run_bot.py  run_web.py  test_run.py
.github/workflows/: python-app.yml  python.yml
.streamlit/: config.toml
alembic/: env.py
config/: config.yaml  notifications.yaml  websocket_config.yaml
docker/: Dockerfile
docker/postgres/: init.sql
docs/: index.md
src/: __init__.py  cli.py
src/auth/: Authentication.py  UserManagement.py
src/bots/: BaseTradingBot.py  __init__.py
src/core/: __init__.py
src/data/: MarketData.py  __init__.py
src/exchange/: BinanceClient.py
src/execution/: OrderExecutor  OrderExecutor.py  __init__.py
src/notifications/: NotificationDashboard.py  NotificationManager.py  TradingAlerts.py
src/risk/: RiskManager.py  __init__.py
src/strategies/: SimpleStrategy.py
src/utils/: Logger.py
src/web/: __init__.py  api.py
src/websocket/: MarketStreamer.py  WebSocketDashboard.py  __init__.py
tests/: __init__.py  test_basic_ modules.py  test_cli.py  test_core.py  test_docker.py  test_execution.py  test_integration.py  test_module_interaction.py  test_quick.py  test_risk.py  test_simple.py  test_web.py
tests/tests/: test_minimal.py
trading-platform/github/: python-app.py
